# fastapi-scaffolder

./: README.md
backend_generator/: example.yml  pyproject.toml
backend_generator/fastapi_scaffolder/: __main__.py  generator.py  parser.py
backend_generator/fastapi_scaffolder/template/: api.jinja2  dependencies.jinja2  fields.jinja2
backend_generator/fastapi_scaffolder/utils/: load_module.py
backend_generator/fastapi_scaffolder/visitors/: controllers.py
backend_generator/tests/: test_backend_generator.py  test_parser.py
fastapi_scaffolder/: consts.py  generator.py  visitor.py
fastapi_scaffolder/template/: api.jinja2  controllers.jinja2  dependencies.jinja2
fastapi_scaffolder/visitors/: controllers.py  imports.py  operations.py
frontend_generator/: cli.js  generator.js  package-lock.json  package.json
frontend_generator/templates/: modelItem.hbs  modelTable.hbs  routes.hbs
frontend_generator/test/: test_generator.js
vue_app/: .babelrc  README.md
vue_app/src/: App.vue  main.ts
vue_app/src/api/: api.ts
vue_app/src/components/: BaseCheckbox.vue  BaseModal.vue  BaseModelItem.vue  BaseModelTable.vue  BaseSection.vue  BaseSpinner.vue  BaseTable.vue  ModelCard.vue  Pagination.vue
vue_app/src/directives/: clickOutside.ts
vue_app/src/router/: index.ts
vue_app/src/utils/: consts.ts
vue_app/src/views/admin/: ModelItem.vue  ModelsList.vue
vuejs_scaffolder/: README.md  package-lock.json  package.json  tsconfig.json
vuejs_scaffolder/src/: App.vue  main.js
vuejs_scaffolder/src/api/: api.js  api.ts
vuejs_scaffolder/src/assets/: main.css
vuejs_scaffolder/src/components/: BaseButton.vue  BaseCheckbox.vue  BaseSection.vue  BaseSelect.vue  BaseTable.vue  ModelCard.vue  ModelsCard.vue  Pagination.vue
vuejs_scaffolder/src/components/icons/: ArrowIcon.vue
vuejs_scaffolder/src/directives/: clickOutside.js
vuejs_scaffolder/src/router/: index.js  index.ts
vuejs_scaffolder/src/utils/: consts.ts
vuejs_scaffolder/src/views/: ModelsList.vue
vuejs_scaffolder/src/views/admin/: ModelItem.vue  ModelTable.vue  ModelsList.vue
