[tool.poetry]
name = "fastapi-scaffolder"
version = "0.1.0"
description = "Console application to scaffold a FastAPI app"
authors = ["Alexey Zotov <zotov.alexei.1@yandex.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/let-robots-reign/fastapi-scaffolder"
repository = "https://github.com/let-robots-reign/fastapi-scaffolder"

classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?$"

[tool.poetry.scripts]
fastapi-scaffold = "fastapi_scaffolder.__main__:app"

[tool.poetry.dependencies]
python = "^3.7.2"
typer = {extras = ["all"], version = ">=0.2.1,<0.7.0"}
datamodel-code-generator = {extras = ["http"], version = "0.16.1"}
stringcase = "^1.2.0"
PySnooper = ">=0.4.1,<1.2.0"
jinja2 = ">=2.11.2,<4.0.0"
pydantic = "^1.5.1"
typed-ast = [
    {version = ">=1.5.0", python = ">=3.9.8"},
    {version = ">=1.4.2", python = "<3.9.8"},
]

[tool.poetry.dev-dependencies]
pylint = "^2.16.2"
pytest = "^7.2"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"
freezegun = "^1.2.2"
black = "22.12.0"
isort = "==5.11.4"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
exclude = '(tests/data|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|.*\/models\.py.*|.*\/models\/.*)'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = "tests/data"

[tool.pydantic-pycharm-plugin.parsable-types]
# str field may parse int and float
str = ["int", "float"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
